<resources>
    <string name="app_name">"MyAppPortfolio "</string>
    <string name="action_settings">Settings</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="media_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="bacon_reader">BACON READER</string>
    <string name="capstone">CAPSTONE:MY OWN APP</string>
</resources>
